fix: Select item z-index

--- a/components/select/style/single.less
+++ b/components/select/style/single.less
@@ -24,7 +24,6 @@
       padding: 0;
       line-height: @select-height-without-border;
       transition: all 0.3s;
-      pointer-events: none;
 
       // Firefox inline-block position calculation is not same as Chrome & Safari. Patch this:
       @supports (-moz-appearance: meterbar) {
@@ -32,6 +31,15 @@
           line-height: @select-height-without-border;
         }
       }
+    }
+
+    .@{select-prefix-cls}-selection-item {
+      position: relative;
+      user-select: none;
+    }
+
+    .@{select-prefix-cls}-selection-placeholder {
+      pointer-events: none;
     }
 
     // For common baseline align
